--- a/resume-backend/package.json
+++ b/resume-backend/package.json
@@ -19,7 +19,9 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "imgur": "^1.0.2",
+    "imgur-node-api": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
