--- a/resume-frontend/package.json
+++ b/resume-frontend/package.json
@@ -10,6 +10,7 @@
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
